<resources>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="last_name">LAST NAME</string>
    <string name="first_name">FIRST NAME</string>
    <string name="sign_up_accept"><![CDATA[Sign Up & Accept]]></string>
    <string name="pick_a_username">Pick a username</string>
    <string name="text_info">Your username is how friends add you on Snapchat.</string>
    <string name="username">USERNAME</string>
    <string name="continue_button">Continue</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="textInfo_birthday">When\'s your birthday?</string>
    <string name="textInfo_name">What\'s your name?</string>
    <string name="set_a_password">Set a password</string>
    <string name="password_info">Your password should be at least 8 characters.</string>
    <string name="text_password_word">PASSWORD</string>
    <string name="button_continue">Continue</string>
    <string name="log_in">Log In</string>
    <string name="username_or_email">USERNAME OR EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in_caps">LOG IN</string>
    <string name="logo">logo</string>
    <string name="addPhone_text1">Sign up with email instead</string>
    <string name="addPhone_text2">MOBILE NUMBER</string>
    <string name="addPhone_text3">What\'s your mobile number?</string>
    <string name="addEmail_text1">EMAIL</string>
    <string name="addEmail_text2">Sign up with phone instead</string>
    <string name="addEmail_text3">What\'s your email?</string>
    <string name="show">Show</string>
    <string name="we_ll_send_you_an_sms_verification_code">We\'ll send you an SMS verification code.</string>
    <string name="your_username">Your username</string>
    <string name="change_my_username">Change my username</string>
    <string name="code">CODE</string>
    <string name="enter_confirmation_code">Enter Confirmation Code</string>
    <string name="take_photo">Take Photo</string>
    <string name="app_name">snapchat.startscreen</string>
    <string name="capture" />
    <string name="preview_area" />

</resources>