<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="snapchat.example.snapchat.LoginAndRegisterActivities.addPhoneNum">

    <TextView
        android:id="@+id/textView_email_text1"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:text="@string/addPhone_text3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_phonenum_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:onClick="addEmail"
        android:text="@string/addPhone_text1"
        android:textColor="#0370e9"
        android:textSize="@dimen/size10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_email_text1" />

    <TextView
        android:id="@+id/textView_email_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="@string/addPhone_text2"
        android:textColor="#1ab0ff"
        android:textSize="@dimen/size10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_phonenum_text3" />


    <EditText
        android:id="@+id/editText_Phone"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_email_text3" />

    <TextView
        android:id="@+id/textView_phonenum_text4"
        android:layout_width="269dp"
        android:layout_height="16dp"
        android:text="@string/we_ll_send_you_an_sms_verification_code"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Phone" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/rounded_button"
        android:enabled="false"
        android:fontFamily="sans-serif"
        android:onClick="addPhone"
        android:text="@string/continue_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>