<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="snapchat.example.snapchat.LoginAndRegisterActivities.setPassword">

    <TextView
        android:id="@+id/textView_password_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/set_a_password"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_password_text2"
        android:layout_width="229dp"
        android:layout_height="34dp"
        android:text="@string/password_info"
        android:textAlignment="center"
        android:textColor="#95000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_password_text1" />

    <TextView
        android:id="@+id/textView_password_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_password_word"
        android:textSize="@dimen/size10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_password_text2" />

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:ems="10"
        android:password="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_password_text3" />

    <TextView
        android:id="@+id/textView_password_text4"
        android:layout_width="243dp"
        android:layout_height="65dp"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Password" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/rounded_button"
        android:enabled="false"
        android:onClick="registerAccount"
        android:text="@string/button_continue"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_password_visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:clickable="true"
        android:onClick="visibility"
        android:text="@string/show"
        android:textColor="#75575757"
        android:textSize="@dimen/size_11sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>